--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.6"
+    "gh-pages": "^3.2.3",
+    "gsap": "^3.8.0",
+    "vue": "^3.2.6",
+    "vue-router": "4"
   },
   "devDependencies": {
+    "@types/node": "^16.11.11",
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.2.6",
+    "sass": "^1.42.1",
     "typescript": "^4.3.2",
     "vite": "^2.5.2",
+    "vite-svg-loader": "^2.2.0",
     "vue-tsc": "^0.2.2"
   }
 }
